tests/check/launch_bounds_semacheck.co
// RUN: not choreo %target -sa=check %s 2>&1 | FileCheck %s
// CHECK: error: {{\[\[}}launch_bounds]] is only valid on block-level parallel-by.
// CHECK: error: {{\[\[}}launch_bounds]] argument must be a compile-time integer constant.
// CHECK: error: {{\[\[}}launch_bounds]] argument must be a non-negative integer.
// CHECK: Totally {{[0-9]+}} errors have been detected.

__co__ void bad_semacheck(int n) {
  [[launch_bounds(1)]]
  parallel t by 128 : thread {
  }

  [[launch_bounds(n)]]
  parallel by 1 : block {
  }

  [[launch_bounds(-1)]]
  parallel by 1 : block {
  }
}

int main() { return 0; }
